# esp8266-managed

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  platformio.ini
src/: config.cpp  config.h  main.cpp  main.h
src/modules/contacts/: contacts.cpp  contacts.h
src/modules/dht11/: dht11.cpp  dht11.h
src/modules/httpUpdate/: httpUpdate.cpp  httpUpdate.h
src/modules/ir/: ir.cpp  ir.h
src/modules/mqtt/: mqtt.cpp  mqtt.h
src/modules/system/: system.cpp  system.h
src/modules/tx433mhz/: tx433mhz.cpp  tx433mhz.h
src/modules/wifi/: wifi.cpp  wifi.h
